2000-11-14  John Harper  <jsh@eazel.com>

	* windows.c (register_property_monitor, Fwindow_put): a general
	interface for getting notification when the value of a window
	property is changed

	* keys.c (keymap_prop_change): property change handler for
	Qkeymap (used to be embedded into Fwindow_put)

	* events.c (ignore_fp_prop_change): called when the
	ignore-fp-keymap property is changed, if a context map is
	cached, recompute it (really fixes #4708)

	* events.c (current_context_map): cache the context map across
	calls
	(flush_current_context_map): new function

	(button_press, motion_notify): new semantics for context maps
	in motion events, the map is the map that was active when the
	button-press event was received. This fixes the
	fast-window-drag bug #4708

2000-11-13  John Harper  <jsh@eazel.com>

	* version 0.33.1

2000-11-10  John Harper  <jsh@eazel.com>

	* events.c (current_context_map): new function, replaces the
	variable of the same name (the context map may now change
	depending on the environment, so it's not cachable). If the
	window's ignore-fp-keymap property is set, give a null context
	keymap

2000-11-08  John Harper  <jsh@eazel.com>

	* version 0.33

2000-11-07  John Harper  <jsh@eazel.com>

	* frames.c (set_frame_shapes): fix stupid bug of getting
	dimensions of scaled images wrong (introduced by the last
	change)

2000-11-06  John Harper  <jsh@eazel.com>

	* frames.c (apply_mask): local function to clip a mask (if
	required) before union'ing it onto the destination window

	(set_frame_shapes): use apply_mask () to form the image mask,
	otherwise only images whose dimensions are an integer multiple
	of the tiled image can be created without corrupting the
	surrounding state. Fixes #4519

	* pixmap-cache.c: added code to disable the pixmap cache if
	DISABLE_CACHE preprocessor macro is defined

2000-11-02  John Harper  <jsh@eazel.com>

	* events.c (focus_in, focus_out): pass MODE parameter to
	focus-{in,out}-hook as for leave/enter hooks
