@@ -1,3 +1,8 @@
+2000-11-16  John Harper  <jsh@eazel.com>
+
+	* main.c (sawfish_symbols): defvar `sawfish-locale-directory'
+	to the value of the SAWFISH_LOCALEDIR macro
+
 2000-11-14  John Harper  <jsh@eazel.com>
 
 	* windows.c (register_property_monitor, Fwindow_put): a general
